Bug 692529 - Regression: character rendered in wrong position
Summary: Regression: character rendered in wrong position
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Text (show other bugs)
Version: master
Hardware: PC All
: P1 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-22 15:36 UTC by Marcos H. Woehrmann
Modified: 2011-10-02 01:38 UTC (History)
0 users

See Also:
Customer: 850
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2011-09-22 15:36:51 UTC
The customer reports and I've verified that the attached file has the number '5' rendered in the wrong position at certain resolutions.  This is a regressions, Ghostscript 8.54 renders the file correctly.  I'm searching for the commit that was responsible for the regression.

The command line I'm using for testing:

  bin/gs -sDEVICE=tiff24nc -o test.tif -r150 ./58834.pdf
Comment 2 Ken Sharp 2011-09-22 15:43:16 UTC
(In reply to comment #0)

> regressions, Ghostscript 8.54 renders the file correctly.  I'm searching for
> the commit that was responsible for the regression.

Try -dDisableFAPI
Comment 3 Ken Sharp 2011-09-22 16:09:31 UTC
Most likely a FreeType/FAPI issue, re-assigning to chris (who probably ought to own 'text' anyway)
Comment 4 Marcos H. Woehrmann 2011-09-22 20:02:07 UTC
(In reply to comment #2)
> (In reply to comment #0)
> 
> > regressions, Ghostscript 8.54 renders the file correctly.  I'm searching for
> > the commit that was responsible for the regression.
> 
> Try -dDisableFAPI

Right you are, broke in dbfa9735f4809fc0f7310f19d2658bf5f3f879e0:

Reverse the previous build options for Freetype integration
Comment 5 Chris Liddell (chrisl) 2011-09-27 14:03:48 UTC
Fixed in:
http://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=ddf450