Bug 692529: reduce potential rounding errors in FAPI/FT

Tweak the heuristic used for avoiding over/underflow problems when converting
scaling to pass into Freetype. This change distributes the over/underflow
protection more evenly between Freetype's resolution, size and matrix
parameters. This prevents the resolution parameter from getting excessively
small, and grid fitting producing unacceptable rounding errors.

This causes differences in about 20 cluster jobs, they are all small changes
in the position of glyphs - neither regressions nor progressions.